# satellite_transmission

./: .gitignore  README.md  config.py  environment.py  grp_mod_arrays.npz  pyproject.toml  requirements.txt
.github/workflows/: lint.yaml  tests.yaml
PPO_logs/SatelliteEnv/: PPO_SatelliteEnv_log_43.csv  PPO_SatelliteEnv_log_54.csv  PPO_SatelliteEnv_log_57.csv  PPO_SatelliteEnv_log_59.csv  PPO_SatelliteEnv_log_60.csv  PPO_SatelliteEnv_log_62.csv  PPO_SatelliteEnv_log_63.csv  PPO_SatelliteEnv_log_65.csv  PPO_SatelliteEnv_log_66.csv  PPO_SatelliteEnv_log_67.csv  PPO_SatelliteEnv_log_70.csv  PPO_SatelliteEnv_log_71.csv  PPO_SatelliteEnv_log_72.csv  PPO_SatelliteEnv_log_73.csv  PPO_SatelliteEnv_log_74.csv  PPO_SatelliteEnv_log_75.csv
PPO_preTrained/SatelliteEnv/: PPO_SatelliteEnv_0_0.pth
app/: analyze_actor_critic.py  generate_easy_instances.py  generate_random_instances.py  main.py
app/comparison/: batch_comparison.py
app/reinforcement_learning/: environment.py
app/reinforcement_learning/agents/: actor_critic.py  ppo.py
app/report/: json_report.py
data/instances_100/: 20230223_instance0.json
docs/: algorithmes.md  documentation.md  modelisation.md
satellite_rl/: __main__.py  analyze_actor_critic.py  config.py  generate_easy_instances.py  generate_instances.py  generate_random_instances.py  main.py  train.py
satellite_rl/comparison/: __init__.py  batch_comparison.py
satellite_rl/reinforcement_learning/: environment.py
satellite_rl/reinforcement_learning/agents/: actor_critic.py  ppo.py  report_generation.py
satellite_rl/report/: __init__.py  json_report.py  launch_server.py  report_dashboard.py  report_generation.py
satellite_rl/report/assets/: style.css
satellite_transmission/: __main__.py  actor_critic.py  batch_comparison.py  config.py  environment.py  json_report.py  main.py  ppo.py
scripts/: analyze_actor_critic.py  generate_easy_instances.py  generate_instances.py  generate_random_instances.py
scripts/instances_100/: instance0.json  instance1.json  instance2.json  instance3.json  instance4.json  instance5.json  instance6.json  instance7.json  instance8.json  instance9.json
tests/: test_environment.py
tests/test_data/: easy_instance.json  toy_instance.json
