[tool.poetry]
name = "satellite_rl"
version = "0.1.0"
description = "Package to optimize a satellite transmission network with reinforcement learning."
authors = [
    "Deseure--Charron Flavien <flavien.deseure-charron@student-cs.fr>",
    "Gabison Yoan <yoan.gabison@student-cs.fr>",
    "Noblot Nicolas <nicolas.noblot@student-cs.fr>"
]
license = "MIT"
readme = "README.md"
packages = [{ include = "satellite_rl" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
torch = [{ markers = "sys_platform == 'macos'", url = "https://download.pytorch.org/whl/cpu/torch-1.13.1-cp310-none-macosx_11_0_arm64.whl" },
    { markers = "sys_platform == 'linux'", url = "https://download.pytorch.org/whl/torch-1.13.1-cp310-cp310-manylinux2014_aarch64.whl" },
    { markers = "sys_platform == 'win32'", version = "1.13.1" }
]
gymnasium = "^0.27.1"
pandas = "^1.5.3"
termcolor = "^2.2.0"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
generate_easy_instances = "satellite_rl.generate_easy_instances:main"
generate_random_instances = "satellite_rl.generate_random_instances:main"
analyze_actor_critic = "satellite_rl.analyze_actor_critic:main"
main = "satellite_rl.main:main"
train = "satellite_rl.train:main"
