[tool.poetry]
name = "satellite_rl"
version = "0.1.0"
description = "Package to optimize a satellite transmission network with reinforcement learning."
authors = [
    "Deseure--Charron Flavien <flavien.deseure-charron@student-cs.fr>",
    "Gabison Yoan <yoan.gabison@student-cs.fr>",
    "Noblot Nicolas <nicolas.noblot@student-cs.fr>"
]
license = "MIT"
readme = "README.md"
packages = [{ include = "satellite_rl" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
gymnasium = "^0.27.1"
pandas = "^1.5.3"
termcolor = "^2.2.0"
tqdm = "^4.65.0"
plotly = "^5.13.1"
torch = "^1.13.1"
dash = "^2.8.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ruff = "^0.0.254"
isort = "^5.12.0"
pylint = "^2.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 100
max-args = 10
disable = "logging-format-interpolation"

[tool.pylint.TYPECHECK]
generated-members = "torch.*"

[tool.poetry.scripts]
generate_easy_instances = "satellite_rl.generate_easy_instances:main"
generate_random_instances = "satellite_rl.generate_random_instances:main"
analyze_actor_critic = "satellite_rl.analyze_actor_critic:main"
main = "satellite_rl.__main__:main"
